[MINOR] Change github actions tests runner memory allocation