@@ -24,6 +24,8 @@
 
 cd /github/workspace
 
+export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
+
 log="/tmp/sysdstest.log"
 mvn -ntp test-compile 2>&1 | grep -E "BUILD|Total time:|---|Building SystemDS"
 mvn -ntp test -D maven.test.skip=false -D automatedtestbase.outputbuffering=true -D test=$1 2>&1 | grep -v "already exists in destination." | tee $log
